2025 最新 AidLux安装php
2025  AidLux安装php

先从官网下载2.0版本的aidlux


系统要求  安卓11




# 先更新软件源
apt update

# 再尝试安装
apt install php -y --allow-unauthenticated

php -v  # 正确命令有空格

php --version


pkg install apache2 php -y


方法三：免root安装


pkg install apache2 php -y



pkg install php-curl php-mysql -y




File ".index.php.50000", line 1

<?php phpinfo();?>
^

SyntaxError: invalid syntax

这个错误提示表明你正在尝试用 Python 解释器运行 PHP 文件，导致语法错误。PHP 和 Python 是两种不同的编程语言，


不能混用解释器执行。











